Cambiada las screen de login

--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ html{
 }
 body{
     padding-top: 70px;
-    background-image: url("website-wallpaper-2.jpg");
+    background-image: url("website-wallpaper.jpg");
     background-repeat: no-repeat;
     background-origin: content-box;
     background-size: cover;
