--- a/estilos.css
+++ b/estilos.css
@@ -2,11 +2,16 @@ html{
     height:100%;
     min-height:100%;
 }
+
 body{
     padding-top: 70px;
-    background-image: url("website-wallpaper.jpg");
+    background-image: url("IMAGENES/website-wallpaper.jpg");
     background-repeat: no-repeat;
     background-origin: content-box;
     background-size: cover;
     background-color: #0A386A;
+}
+
+.form-space{
+    margin-top: 40px;
 }
